--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -108,6 +108,7 @@ li a:hover {
 }
 
 .object_earth_close{
+    z-index: 1;
     position: fixed;
     top: 31%;
     left: 15%;
@@ -115,6 +116,7 @@ li a:hover {
 }
 
 .object_moon_close{
+    z-index: 1;
     position: fixed;
     top: 26%;
     left: 56%;
@@ -285,6 +287,7 @@ li a:hover {
 
   .card {
     z-index: 2;
+    position: relative;
     top: 20%;
     box-shadow: 0 0 20px 0;
     background: inherit;
@@ -330,3 +333,4 @@ li a:hover {
 a {
     color: inherit
 }
+
